changed the names of the certs

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               <div class="art-links-frame p-15-15">
 
                 <!-- download cv button -->
-                <a href="files/Tevin Runo CV.pdf" class="art-link" download>Download cv <i class="fas fa-download"></i></a>
+                <a href="files/Tevin-Runo-CV.pdf" class="art-link" download>Download cv <i class="fas fa-download"></i></a>
 
               </div>
               <!-- links frame end -->
@@ -517,7 +517,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                              <div class="art-links-frame p-15-15">
 
                                 <!-- download cv button -->
-                             <a href="files/recommendation.jpg" class="art-link art-color-link art-w-chevron" download>View </a>
+                             <a href="files/Telvin-runo-recommendation.jpg" class="art-link art-color-link art-w-chevron" download>View </a>
 
                             </div>
                             </div>
@@ -556,7 +556,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                              <div class="art-links-frame p-15-15">
 
                                 <!-- download cv button -->
-                             <a href="files/certificate.png" class="art-link art-color-link art-w-chevron" download>View </a>
+                             <a href="files/Telvin-runo-certificate-from-cisco.png" class="art-link art-color-link art-w-chevron" download>View </a>
 
                             </div>
                             </div>
@@ -596,7 +596,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                                 <div class="art-links-frame p-15-15">
 
                                 <!-- download cv button -->
-                             <a href="files/EF SET Certificate.png" class="art-link art-color-link art-w-chevron" download>View </a>
+                             <a href="files/Telvin-runo-EF SET Certificate.png" class="art-link art-color-link art-w-chevron" download>View </a>
 
                              </div>
                             <!-- testimonial body end -->
