fixed the empty form issue

--- a/index.html
+++ b/index.html
@@ -1182,7 +1182,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                         <!-- form field end -->
                         <!-- button -->
                         <div class="art-submit-frame">
-                          <button class="art-btn art-btn-md art-submit" onclick="sendMail(event)"><span>Send message</span></button>
+                          <button class="art-btn art-btn-md art-submit" type="submit" onclick="sendMail(event)"><span>Send message</span></button>
                           <!-- success -->
                           <div class="art-success">Success <i class="fas fa-check"></i></div>
                         </div>
