added the icons designer job role

--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                               <span class="art-date">Jan 2022 - Present</span>
                             </div>
                           </div>
-                          <p>I am a python freelancer at upwork.</p>
+                          <p>I am a python developer and an icons designer  at upwork.</p>
                           <!-- <a data-fancybox="recommendation" href="#art-recomendation-popup-3" class="art-link art-color-link art-w-chevron">Recommendation</a> -->
                         </div>
 
