--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                                 <h5 class="mb-15">A crypto tracker app</h5>
                               </a>
                               <!-- text -->
-                              <div class="mb-15">This Rect app allows you to track cryptocurrencies live!</div>
+                              <div class="mb-15">This Rect app allows you to track cryptocurrencies live!(recommended for both mobile and pc since it is fully responsive)</div>
                               <!-- link -->
                               <a href="https://telvins-crypto-tracker.on.fleek.co/" class="art-link art-color-link art-w-chevron">view live</a>
                             </div>
@@ -892,7 +892,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                                 <h5 class="mb-15">Blockchain based online voting system</h5>
                               </a>
                               <!-- text -->
-                              <div class="mb-15">This is an IPFS based E-voting app</div>
+                              <div class="mb-15">This is an IPFS based E-voting app(recommended for pc only.Pc must have metamask wallet installed)</div>
                               <!-- link -->
                               <a href="https://dekut-decides.on.fleek.co/" class="art-link art-color-link art-w-chevron">View live</a>
                             </div>
