fixed the project display cards

--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                                 <h5 class="mb-15">A crypto tracker app</h5>
                               </a>
                               <!-- text -->
-                              <div class="mb-15">This Rect app allows you to track cryptocurrencies live!(recommended for both mobile and pc since it is fully responsive)</div>
+                              <div class="mb-15">This Rect app allows you to track cryptocurrencies live!(recommended for both mobile and pc since it is fully responsive)<br><br></div>
                               <!-- link -->
                               <a href="https://telvins-crypto-tracker.on.fleek.co/" class="art-link art-color-link art-w-chevron">view live</a>
                             </div>
@@ -927,7 +927,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                                 <h5 class="mb-15">Monday CRM clone</h5>
                               </a>
                               <!-- text -->
-                              <div class="mb-15">This clone has the project tracking capabilities of Monday CRM app!</div>
+                              <div class="mb-15">This clone has the project tracking capabilities of Monday CRM app!<br><br><br><br></div>
                               <!-- link -->
                               <div  class="art-link art-color-link art-w-chevron">coming soon</div>
                             </div>
@@ -961,7 +961,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                                 <h5 class="mb-15">coming soon...</h5>
                               </a>
                               <!-- text -->
-                              <div class="mb-15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet!</div>
+                              <div class="mb-15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet!<br><br><br><br></div>
                               <!-- link -->
                               <a href="#." class="art-link art-color-link art-w-chevron">Read more</a>
                             </div>
@@ -995,7 +995,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                                 <h5 class="mb-15">coming soon</h5>
                               </a>
                               <!-- text -->
-                              <div class="mb-15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet!</div>
+                              <div class="mb-15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet!<br><br><br><br></div>
                               <!-- link -->
                               <a href="#." class="art-link art-color-link art-w-chevron">Read more</a>
                             </div>
