fixed the coming soon thinggie

--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                               <!-- text -->
                               <div class="mb-15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet!<br><br><br><br></div>
                               <!-- link -->
-                              <a href="#." class="art-link art-color-link art-w-chevron">Read more</a>
+                              <a href="#." class="art-link art-color-link art-w-chevron">Coming soon</a>
                             </div>
                             <!-- post description end -->
                           </div>
@@ -997,7 +997,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                               <!-- text -->
                               <div class="mb-15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet!<br><br><br><br></div>
                               <!-- link -->
-                              <a href="#." class="art-link art-color-link art-w-chevron">Read more</a>
+                              <a href="#." class="art-link art-color-link art-w-chevron">Coming soon</a>
                             </div>
                             <!-- post description end -->
                           </div>
