edited out more stuff

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <!-- main css -->
   <link rel="stylesheet" href="css/style.css">
 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
 
   
   <script type="text/javascript"
@@ -31,6 +33,7 @@
    })();
   </script>
 
+    
   <title>Telvin Runo</title>
 </head>
 
@@ -83,7 +86,7 @@
               <!-- name -->
               <h5 class="art-name mb-10">Telvin Runo</h5>
               <!-- post -->
-              <div class="art-sm-text">>>Cyber assurance specialist <br>>>Full-stack developer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>>>Python developer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
+              <div class="art-sm-text"><i class="material-icons" style="font-size:12px;color:gold;">bolt</i>Cyber assurance specialist <br><i class="material-icons" style="font-size:12px;color:gold;">bolt</i>Full-stack developer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br><i class="material-icons" style="font-size:12px;color:gold;">bolt</i>Python developer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
             </div>
             <!-- info bar header end -->
 
@@ -754,7 +757,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                               <span class="art-date">Jan 2022 - April 2022</span>
                             </div>
                           </div>
-                          <p>Received full stack web development(MERN)training at The Jitu.View the certificate of recommendation in the section above</p>
+                          <p>Received full stack web development(MERN)training at The Jitu.View certificate of recommendation in the section above</p>
                           <!-- <a data-fancybox="recommendation" href="#art-recomendation-popup-1" class="art-link art-color-link art-w-chevron">Recommendation</a> -->
                         </div>
 
@@ -782,7 +785,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                               <span class="art-date">Jan 2022 - Dec 2022</span>
                             </div>
                           </div>
-                          <p>I  was a python developer and an icons designer  at upwork.</p>
+                          <p>Python developer and icons designer at upwork.</p>
                           <!-- <a data-fancybox="recommendation" href="#art-recomendation-popup-3" class="art-link art-color-link art-w-chevron">Recommendation</a> -->
                         </div>
 
@@ -886,7 +889,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                                 <h5 class="mb-15">A crypto tracker app</h5>
                               </a>
                               <!-- text -->
-                              <div class="mb-15">This Rect app allows you to track cryptocurrencies live!(recommended for both mobile and pc since it is fully responsive)<br><br></div>
+                              <div class="mb-15">This Rect app allows you to track cryptocurrencies live!.It is also IPFS based (recommended for both mobile and pc since it is fully responsive)<br><br></div>
                               <!-- link -->
                               <a href="https://telvins-crypto-tracker.on.fleek.co/" class="art-link art-color-link art-w-chevron">view live</a>
                             </div>
@@ -917,7 +920,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                                 <h5 class="mb-15">Blockchain based online voting system</h5>
                               </a>
                               <!-- text -->
-                              <div class="mb-15">This is an IPFS based E-voting app(recommended for pc only.Pc must have metamask wallet installed)</div>
+                              <div class="mb-15">This is an IPFS based E-voting app(recommended for pc only.Pc must have metamask wallet installed as the project is blockchain based)</div>
                               <!-- link -->
                               <a href="https://dekut-decides.on.fleek.co/" class="art-link art-color-link art-w-chevron">View live</a>
                             </div>
@@ -951,7 +954,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                                 <h5 class="mb-15">coming soon...</h5>
                               </a>
                               <!-- text -->
-                              <div class="mb-15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet!<br><br><br><br></div>
+                              <div class="mb-15"><br><br><br><br></div>
                               <!-- link -->
                               <a href="#." class="art-link art-color-link art-w-chevron">Coming soon</a>
                             </div>
@@ -982,10 +985,10 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                             <div class="art-post-description">
                               <!-- title -->
                               <a href="#.">
-                                <h5 class="mb-15">coming soon</h5>
+                                <h5 class="mb-15">coming soon...</h5>
                               </a>
                               <!-- text -->
-                              <div class="mb-15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet!<br><br><br><br></div>
+                              <div class="mb-15"><br><br><br><br></div>
                               <!-- link -->
                               <a href="#." class="art-link art-color-link art-w-chevron">Coming soon</a>
                             </div>
@@ -1172,7 +1175,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                         <!-- form field end -->
                         <!-- button -->
                         <div class="art-submit-frame">
-                          <button class="art-btn art-btn-md art-submit" type="submit" onclick="sendMail(event)"><span>Send message</span></button>
+                          <button id="random" class="art-btn art-btn-md art-submit" type="submit" onclick="sendMail(event)"><span>Send message</span></button>
                           <!-- success -->
                           <div class="art-success">Success <i class="fas fa-check"></i></div>
                         </div>
@@ -1267,7 +1270,7 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
   <script src="js/plugins/swup.min.js"></script>
 
   <!-- main js -->
-  <script src="js/main.js"></script>
+  <script src="js/main.js"></script> 
 
 </body>
 
