edited out more stuff

--- a/index.html
+++ b/index.html
@@ -1100,7 +1100,8 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                             <h6>Email:</h6><span>telvinrunoh@gmail.com</span>
                           </li>
                           <li>
-                            <h6>Linked-in:</h6><span>telvin-runo-266236218</span>
+                            <!-- <h6>Linked-in:</h6><span>telvin-runo-266236218</span> -->
+                            <h6>Linked-in:</h6><span>Telvin Runo</span>
                           </li>
                 
                         </ul>
@@ -1131,61 +1132,12 @@ I am a highly motivated red teamer with a passion for identifying and exploiting
                   <!-- col end -->
 
                   <!-- col -->
-                  <div  class="col-lg-12">
+                    
 
-                    <!-- section title -->
-                    <div class="art-section-title">
-                      <!-- title frame -->
-                      <div class="art-title-frame">
-                        <!-- title -->
-                        <h4 id="get-in-touch" >Get in touch</h4>
-                      </div>
-                      <!-- title frame end -->
-                    </div>
-                    <!-- section title end -->
 
-                    <!-- contact form frame -->
-                    <div class="art-a art-card">
+                     <!-- send mail -->
 
-                      <!-- contact form -->
-                      <form method="post" id="form" class="art-contact-form">
-                        <!-- form field -->
-                        <div class="art-form-field">
-                          <!-- name input -->
-                          <input id="name" name="name" class="art-input" type="text" placeholder="Your name" required>
-                          <!-- label -->
-                          <label for="name"><i class="fas fa-user"></i></label>
-                        </div>
-                        <!-- form field end -->
-                        <!-- form field -->
-                        <div class="art-form-field">
-                          <!-- email input -->
-                          <input id="email" name="email" class="art-input" type="email" placeholder="Your email" required>
-                          <!-- label -->
-                          <label for="email"><i class="fas fa-at"></i></label>
-                        </div>
-                        <!-- form field end -->
-                        <!-- form field -->
-                        <div class="art-form-field">
-                          <!-- message textarea -->
-                          <textarea id="message" name="text" class="art-input" placeholder="Type your message here" required></textarea>
-                          <!-- label -->
-                          <label for="message"><i class="far fa-envelope"></i></label>
-                        </div>
-                        <!-- form field end -->
-                        <!-- button -->
-                        <div class="art-submit-frame">
-                          <button id="random" class="art-btn art-btn-md art-submit" type="submit" onclick="sendMail(event)"><span>Send message</span></button>
-                          <!-- success -->
-                          <div class="art-success">Success <i class="fas fa-check"></i></div>
-                        </div>
-                      </form>
-                      <!-- contact form end -->
 
-                    </div>
-                    <!-- contact form frame end -->
-
-                  </div>
                   <!-- col end -->
 
                 </div>
